monitoring/grafana/grafana-ingressroute.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard-tls
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`movies.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`movies.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
